packages/ui/src/components/Switch/Switch.module.css
.Container {
  display: flex;
  font-size: var(--font-text-sm-size);
  line-height: var(--font-text-sm-line-height);
  user-select: none;

  &[data-has-label] {
    align-items: flex-start;
  }

  &[data-label-position="start"] {
    flex-direction: row-reverse;
  }
}

.Track {
  position: relative;
  flex-shrink: 0;
  width: var(--switch-track-width);
  max-width: var(--switch-track-width);
  height: var(--switch-track-height);
  border: 0;
  border-radius: var(--radius-full);
  background: var(--switch-track-color);
  cursor: pointer;
  transition: background-color 250ms var(--cubic-move);

  &:where(:not([data-disabled], [data-state="checked"])) {
    @mixin hover {
      background: var(--switch-track-color-hover);
    }
  }

  [data-has-label] & {
    /*
     * Vertical alignment adjusting when necessary. Avoid using align-items: center; for long wrapping labels.
     */
    top: var(--switch-track-top-offset, 1px);
  }

  &:focus-visible {
    outline: 2px solid var(--color-ring);
    outline-offset: 2px;
  }

  &[data-state="checked"] {
    background: var(--switch-track-color-checked);
  }

  &[data-disabled] {
    background: var(--switch-track-color-disabled);
    cursor: not-allowed;

    &[data-state="checked"] {
      background: var(--switch-track-color-checked-disabled);
    }
  }
}

.Thumb {
  position: absolute;
  top: var(--switch-thumb-offset);
  left: var(--switch-thumb-offset);
  display: block;
  width: var(--switch-thumb-size);
  height: var(--switch-thumb-size);
  border-radius: var(--radius-full);
  background: var(--switch-thumb-color);
  box-shadow: var(--switch-thumb-shadow);
  transition: transform 250ms var(--cubic-move);

  [data-state="checked"] & {
    transform: translateX(
      calc(var(--switch-track-width) - var(--switch-thumb-size) - var(--switch-thumb-offset) * 2)
    );
  }

  &[data-disabled] {
    background: var(--switch-thumb-color-disabled);
    box-shadow: none;
  }
}

.LabelGroup {
  display: flex;
  flex-direction: column;
  gap: 4px;

  /* Use padding so that the spacing is intrinsic to the group, remaining clickable. */
  [data-label-position="end"] & {
    padding-left: var(--switch-label-gap);
  }

  [data-label-position="start"] & {
    padding-right: var(--switch-label-gap);
  }

  [data-disabled] & {
    cursor: not-allowed;
  }
}

.Label {
  cursor: pointer;

  /* Use padding so that the spacing is intrinsic to the label, remaining clickable. */
  [data-label-position="end"] > & {
    padding-left: var(--switch-label-gap);
  }

  [data-label-position="start"] > & {
    padding-right: var(--switch-label-gap);
  }

  [data-disabled] & {
    cursor: not-allowed;
  }
}

.Description {
  color: var(--color-text-secondary);
  font-size: var(--font-text-xs-size);
  line-height: var(--font-text-xs-line-height);
  cursor: pointer;

  [data-disabled] & {
    cursor: not-allowed;
  }
}

